--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_BASE_URL="http://localhost:3000"
-VITE_ASSETS_URL = "http://localhost:5173"
+VITE_BASE_URL="https://shopezmarket.onrender.com"
+VITE_ASSETS_URL = "https://shopez-market.vercel.app"
